# MasterThesis

./: CMakeLists.txt  README.md
plots/: eos_neu.p  fit  p_loop.p  pressure_mass_R.p
src/: Makefile  eos_tpp.f90  main.f90  manual  ode.f90  parameters.f90  rk.f90  write.f90
tables/: t0.benchout
